--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,11 @@
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"cinttypes": "cpp",
-		"typeinfo": "cpp"
+		"typeinfo": "cpp",
+		"any": "cpp",
+		"map": "cpp",
+		"set": "cpp",
+		"iomanip": "cpp",
+		"variant": "cpp"
 	}
 }
